[Links] Fix spacing issues.

--- a/styles/links.css
+++ b/styles/links.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  max-width: 800px;
-  padding: 0 .5em;
+  padding-inline: 1em;
   overflow: auto;
   margin: auto;
 }
@@ -12,11 +11,11 @@
 .tabs {
   display: flex;
   flex-direction: row;
-  column-gap: .5em;
-  padding: .5em;
+  column-gap: 1em;
+  padding: 1em;
   border: 2px solid var(--light300);
-  border-radius: .5em;
-  margin-top: .5em;
+  border-radius: 1em;
+  margin-top: 1em;
   position: relative;
 }
 
@@ -54,8 +53,8 @@
 .profile-pic {
   border: 2px solid var(--light300);
   border-radius: 50%;
-  width: 5em;
-  height: 5em;
+  width: 7em;
+  height: 7em;
 }
 
 .profile-pic img {
@@ -77,9 +76,11 @@
 }
 
 .links {
-  margin-top: 2.5em;
+  margin-top: 3em;
   margin-bottom: 1em;
   width: 100%;
+  max-width: 800px;
+  margin-inline: auto;
 }
 
 .links-list {
@@ -89,7 +90,7 @@
 }
 
 .links-list>*+* {
-  margin-top: .5em;
+  margin-top: 1em;
 }
 
 .link {
@@ -108,9 +109,10 @@
 }
 
 .icon {
-  width: 2.5em;
-  height: 2.5em;
-  margin-right: 1em;
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: 2em;
+  margin-left: 1em;
 }
 
 .icon img {
@@ -125,7 +127,7 @@
 .link .text {
   display: flex;
   flex-direction: column;
-  row-gap: .5em;
+  row-gap: .25em;
 }
 
 .footer {
